--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/CSS/sign.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,10 +11,11 @@
   <title>signup</title>
 </head>
 
+<!--네이밍은 형태_의미_상태 순으로 조합하며 3단계를 넘지 않도록 합니다.-->
 <body class="sign">
   <div class="sign__inner">
     <div class="sign__inner__logo">
-      <a href="/"><img src="/img/logo.svg" alt="사이트 로고 Linkbrary" class="sign__logo__img"></a>
+      <a href="/"><img src="/assets/images/svg/sign-logo.svg" alt="사이트 로고 Linkbrary" class="sign__logo__img"></a>
       <div class="sign__logo__centerTest">
         <p class="sign__logo__not-member">이미 회원이신가요?</p>
         <a href="/signin.html" class="signin__logo__link-signup">로그인 하기</a>
@@ -31,18 +32,18 @@
           <label for="password" class="sign-input__login__label">비밀번호</label>
           <div class="sign-input__pw-eye">
             <input type="password" class="sign-input__login__input" name="pw">
-            <div class="sign-input__pw-eye-off">  
-              <img src="/img/eye-off.svg">
-            </div>
+            <button class="sign-input__pw-eye-off">  
+              <img src="/assets/images/svg/eye-off.svg" class="eye-off" alt="비밀번호 감추기">
+            </button>
           </div>
         </div>
         <div class="sign-input__login">
           <label for="password" class="sign-input__login__label">비밀번호 확인</label>
           <div class="sign-input__pw-eye">
             <input type="password" class="sign-input__login__input" name="pw">
-            <div class="sign-input__pw-eye-off">  
-              <img src="/img/eye-off.svg">
-            </div>
+            <button class="sign-input__pw-eye-off">  
+              <img src="/assets/images/svg/eye-off.svg" class="eye-off" alt="비밀번호 감추기">
+            </button>
           </div>
         </div>
       </div>
@@ -50,19 +51,17 @@
     </form>
   </div>
 
-  <div class="other-login">
-    <p class="other-login__title">다른 방식으로 가입하기</p> 
-    <div class="other-login__inner">
+  <div class="social-sign">
+    <p class="social-sign__title">다른 방식으로 가입하기</p> 
+    <div class="social-sign__inner">
       <a href="https://www.google.com/">
-        <div class="other-login__inner__icon">
-          <img src="/img/google.png" class="other-login__icon-img">
-          <img src="/img/googleback.svg" alt="google">
+        <div class="social-sign__inner__icon">
+          <img src="/assets/images/svg/social-icon-google.png" class="social-sign__icon-img">
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
-        <div class="other-login__inner__icon">
-          <img src="/img/kakao.svg" class="other-login__icon-img">
-          <img src="/img/kakaoback.svg" alt="kakao">
+        <div class="social-sign__inner__icon">
+          <img src="/assets/images/svg/social-icon-kakao.png" class="social-sign__icon-img">
         </div>
       </a>
     </div>
