--- a/signin.html
+++ b/signin.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signIn</title>
     <link rel="stylesheet" href="signin.css" />
+    <link rel="stylesheet" href="global.css" />
   </head>
   <body>
     <div class="section">
-      <div class="content">
+      <form class="content">
         <div class="title">
           <a href="index.html">
             <img class="logo-img" src="./img/logo.svg" alt="" />
@@ -42,7 +43,7 @@
             /></a>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </body>
 </html>
