--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signUp</title>
     <link rel="stylesheet" href="signUp.css" />
+    <link rel="stylesheet" href="global.css" />
   </head>
   <body>
     <div class="section">
