--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="./src/landing.css">
+    <meta property="og:title" content="Linkbrary">
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta property="og:url" content="https://codeit-linkbrary-sy.netlify.app/">
+    <meta property="og:image" href="./images/preview.png">
 </head>
 <body>
     <nav>
