--- a/signup/signup.html
+++ b/signup/signup.html
@@ -3,7 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Linkbrary</title>
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="signup.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="../index.html"
+        ><img src="../img/logo.svg" alt="Linkbrary" width="210px" height="38px"
+      /></a>
+      <p>이미 회원이신가요?<a href="../signin/signin.html">로그인 하기</a></p>
+    </header>
+    <section>
+      <form action="">
+        <div>
+          <label for="email">이메일</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="codeit@codeit.com"
+            required
+          />
+        </div>
+        <div>
+          <label for="password">비밀번호</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="········"
+            required
+          />
+          <img
+            src="../img/eye_on.svg"
+            alt="비밀번호 보호"
+            width="16px"
+            height="16px"
+          />
+        </div>
+        <div>
+          <label for="password_check">비밀번호 확인</label>
+          <input
+            type="password"
+            name="password_check"
+            id="password_check"
+            placeholder="········"
+            required
+          />
+          <img
+            src="../img/eye_on.svg"
+            alt="비밀번호 보호"
+            width="16px"
+            height="16px"
+          />
+        </div>
+        <button type="button">회원가입</button>
+      </form>
+      <footer>
+        <span>다른 방식으로 가입하기</span>
+        <div>
+          <a href="https://www.google.com/"
+            ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
+          /></a>
+          <a href="https://www.kakaocorp.com/page/"
+            ><img
+              src="../img/kakao.svg"
+              alt="카카오"
+              width="42px"
+              height="42px"
+          /></a>
+        </div>
+      </footer>
+    </section>
+  </body>
 </html>
