--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/sign.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
@@ -14,7 +14,7 @@
     <div class="signin">
       <div class="signin-form">
         <div class="signin-logo">
-          <a href="index.html"><img src="svgs/logo.svg" alt="logo" /></a>
+          <a href="index.html"><img src="imgs/logo.svg" alt="logo" /></a>
           <div class="question black">
             <span>회원이 아니신가요?</span>
             <a href="signin.html" class="primary">로그인 하기</a>
@@ -44,10 +44,10 @@
           <span>다른 방식으로 가입하기</span>
           <div class="social-images">
             <a href="https://www.google.com/"
-              ><img src="svgs/google.svg" alt="google"
+              ><img src="imgs/google.svg" alt="google"
             /></a>
             <a href="https://www.kakaocorp.com/page/"
-              ><img src="svgs/kakao.svg" alt="kakao"
+              ><img src="imgs/kakao.svg" alt="kakao"
             /></a>
           </div>
         </div>
