--- a/signup/signup.html
+++ b/signup/signup.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="signup.css" />
   </head>
   <body>
-    <header>
+    <header class="title">
       <a href="../index.html"
         ><img src="../img/logo.svg" alt="Linkbrary" width="210px" height="38px"
       /></a>
-      <p>이미 회원이신가요?<a href="../signin/signin.html">로그인 하기</a></p>
+      <p class="title_p">
+        이미 회원이신가요?<a class="title_link" href="../signin/signin.html"
+          >로그인 하기</a
+        >
+      </p>
     </header>
-    <section>
+    <section class="form_section">
       <form action="">
-        <div>
-          <label for="email">이메일</label>
+        <div class="form_section_div">
+          <label class="label" for="email">이메일</label>
           <input
+            class="input"
             type="email"
             name="email"
             id="email"
@@ -26,9 +31,10 @@
             required
           />
         </div>
-        <div>
-          <label for="password">비밀번호</label>
+        <div class="form_section_div div_margin relative">
+          <label class="label" for="password">비밀번호</label>
           <input
+            class="input"
             type="password"
             name="password"
             id="password"
@@ -36,15 +42,17 @@
             required
           />
           <img
+            class="absolute"
             src="../img/eye_on.svg"
             alt="비밀번호 보호"
             width="16px"
             height="16px"
           />
         </div>
-        <div>
-          <label for="password_check">비밀번호 확인</label>
+        <div class="form_section_div div_margin relative">
+          <label class="label" for="password_check">비밀번호 확인</label>
           <input
+            class="input"
             type="password"
             name="password_check"
             id="password_check"
@@ -52,29 +60,26 @@
             required
           />
           <img
+            class="absolute"
             src="../img/eye_on.svg"
             alt="비밀번호 보호"
             width="16px"
             height="16px"
           />
         </div>
-        <button type="button">회원가입</button>
+        <button class="button" type="button">회원가입</button>
       </form>
-      <footer>
-        <span>다른 방식으로 가입하기</span>
-        <div>
-          <a href="https://www.google.com/"
-            ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
-          /></a>
-          <a href="https://www.kakaocorp.com/page/"
-            ><img
-              src="../img/kakao.svg"
-              alt="카카오"
-              width="42px"
-              height="42px"
-          /></a>
-        </div>
-      </footer>
     </section>
+    <footer class="footer">
+      <span clss="footer_text">다른 방식으로 가입하기</span>
+      <div class="footer_link">
+        <a href="https://www.google.com/"
+          ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
+        /></a>
+        <a href="https://www.kakaocorp.com/page/"
+          ><img src="../img/kakao.svg" alt="카카오" width="42px" height="42px"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
