Build: css에서 scss로 전환하고, html 클래스 이름 변경

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="wrap">
     <!-- header -->
     <header class="head__main">
-      <div class="inner d_flex_btw">
+      <div class="head__inner d__flex__btw">
         <h1 class="head__logo">
           <a href="/">
             <img src="img/logo/logo.svg" alt="linkbrary">
@@ -63,7 +63,7 @@
 
       <!-- 1.section -->
       <section class="section section__link">
-        <div class="inner">
+        <div class="section__inner">
           <div class="section__text__box">
             <h3 class="title title__h3 ">
               <span class="title__clip type1">원하는 링크</span>를<br>
@@ -80,7 +80,7 @@
       </section>
       <!-- 2.section -->
       <section class="section section__folder">
-        <div class="inner">
+        <div class="section__inner">
           <div class="section__text__box">
             <h3 class="title title__h3">
               링크를 폴더로<br>
@@ -96,7 +96,7 @@
       </section>
       <!-- 3.section -->
       <section class="section section__share">
-        <div class="inner">
+        <div class="section__inner">
           <div class="section__text__box">
             <h3 class="title title__h3">
               저장한 링크를<br>
@@ -113,7 +113,7 @@
       </section>
       <!-- 4.section -->
       <section class="section section__search">
-        <div class="inner">
+        <div class="section__inner">
           <div class="section__text__box">
             <h3 class="title title__h3">
               저장한 링크를<br>
@@ -129,15 +129,15 @@
     </main>
     <!-- footer -->
     <footer class="foot__main">
-      <div class="inner">
-        <address>
+      <div class="foot__inner">
+        <address class="foot__sign">
           <a href="https://www.codeit.kr/" target="_blank">©codeit - 2023</a>
         </address>
-        <nav class="d_flex foot__nav">
+        <nav class="d__flex foot__nav">
           <a href="/privacy.html">Privacy Policy</a>
           <a href="/faq.html">FAQ</a>
         </nav>
-        <div class="d_flex btn__sns">
+        <div class="d__flex foot__btn__sns">
           <a href="https://www.facebook.com/?locale=ko_KR" target="_blank">
             <img src="img/icon/icons_face.svg" alt="페이스북">
           </a>
