--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
           <img src="img/logo/logo.svg" alt="linkbrary">
         </a>
       </h1>
-      <div class="login__sign d_flex_center">
+      <div class="login__sign d__flex__center">
         <span>이미 회원이신가요?</span>
         <a href="/signin.html">로그인 하기</a>
       </div>
@@ -55,22 +55,22 @@
             <input type="text" id="email">
           </div>
           <div class="form__box pw">
-            <label for="login_pw" class="text__size__s">비밀번호</label>
+            <label for="form__pw" class="text__size__s">비밀번호</label>
             <div class="form__relative">
-              <input type="password" id="signup__pw__input" autocomplete="off">
-              <button type="button" class="btn__pw pw__off signup__btn-pw">
-                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon_on">
-                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon_off">
+              <input type="password" id="form__pw" autocomplete="off">
+              <button type="button" class="btn__pw btn__pw__off signup__btn-pw">
+                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon__on">
+                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
             </div>
           </div>
           <div class="form__box pw">
-            <label for="login_pw2" class="text__size__s">비밀번호 확인</label>
+            <label for="form__pw__confirm" class="text__size__s">비밀번호 확인</label>
             <div class="form__relative">
-              <input type="password" id="signup__pw__input2" autocomplete="off">
-              <button type="button" class="btn__pw pw__off signup__btn-pw2">
-                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon_on">
-                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon_off">
+              <input type="password" id="form__pw__confirm" autocomplete="off">
+              <button type="button" class="btn__pw btn__pw__off signup__btn-pw2">
+                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon__on">
+                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
             </div>
             <p id="error__pw__text" class="error__text">비밀번호가 틀렸습니다.</p>
@@ -79,13 +79,13 @@
         </div>
       </form>
       <!-- sns 가입하기 -->
-      <div class="d_flex_btw login__another">
+      <div class="d__flex__btw login__another">
         <span class="text__size__s">다른 방식으로 가입하기</span>
-        <div class="d_flex login__sns">
-          <a href="https://www.google.co.kr/?hl=ko" target="_blank" class="d_flex_center">
+        <div class="d__flex login__sns">
+          <a href="https://www.google.co.kr/?hl=ko" target="_blank" class="d__flex__center">
             <img src="img/icon/icon_google.png" alt="구글로그인">
           </a>
-          <a href="https://www.kakaocorp.com/page/" target="_blank" class="d_flex_center">
+          <a href="https://www.kakaocorp.com/page/" target="_blank" class="d__flex__center">
             <img src="img/icon/icon_kakao.png" alt="카카오로그인">
           </a>
         </div>
