--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@
 <body>
   <div id="wrap">
     <header class="head__main">
-      <div class="inner d_flex_btw">
+      <div class="head__inner d__flex__btw">
         <h1 class="head__logo">
           <a href="/">
             <img src="img/logo/logo.svg" alt="linkbrary 로고">
