--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
           <img src="img/logo/logo.svg" alt="linkbrary">
         </a>
       </h1>
-      <div class="login__sign d_flex_center">
+      <div class="login__sign d__flex__center">
         <span>회원이 아니신가요?</span>
         <a href="/signup.html">회원 가입하기</a>
       </div>
@@ -59,9 +59,9 @@
             <label for="login__pw__input" class="text__size__s">비밀번호</label>
             <div class="form__relative">
               <input type="password" id="login__pw__input" autocomplete="off">
-              <button type="button" class="btn__pw pw__off login__btn-pw">
-                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon_on">
-                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon_off">
+              <button type="button" class="btn__pw btn__pw__off login__btn-pw">
+                <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon__on">
+                <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
             </div>
           </div>
@@ -69,13 +69,13 @@
         </div>
       </form>
       <!-- sns 로그인 -->
-      <div class="d_flex_btw login__another">
+      <div class="d__flex__btw login__another">
         <span class="text__size__s">소셜 로그인</span>
-        <div class="d_flex login__sns ">
-          <a href="https://www.google.co.kr/?hl=ko" target="_blank" class="d_flex_center">
+        <div class="d__flex login__sns ">
+          <a href="https://www.google.co.kr/?hl=ko" target="_blank" class="d__flex__center">
             <img src="img/icon/icon_google.png" alt="구글로그인">
           </a>
-          <a href="https://www.kakaocorp.com/page/" target="_blank" class="d_flex_center">
+          <a href="https://www.kakaocorp.com/page/" target="_blank" class="d__flex__center">
             <img src="img/icon/icon_kakao.png" alt="카카오로그인">
           </a>
         </div>
