--- a/index.html
+++ b/index.html
@@ -3,7 +3,136 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Linkbray</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html"
+        ><img src="img/logo.svg" alt="Linkbrary" width="133px" height="24px"
+      /></a>
+      <button type="button">로그인</button>
+    </header>
+    <main>
+      <section>
+        <h1>
+          <span>세상의 모든 정보</span>를<br />
+          쉽게 저장하고 관리해 보세요
+        </h1>
+        <button type="button">링크 추가하기</button>
+        <img
+          src="img/image_box1.png"
+          alt="서비스 소개"
+          width="1118px"
+          height="537px"
+        />
+      </section>
+      <section>
+        <div>
+          <div>
+            <h2>
+              <span>원하는 링크</span>를<br />
+              저장하세요
+            </h2>
+            <p>
+              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
+              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+              한 공간에 저장하세요.
+            </p>
+          </div>
+          <img
+            src="img/image_box2.png"
+            alt="링크 기능"
+            width="550px"
+            height="450px"
+          />
+        </div>
+
+        <div>
+          <img
+            src="img/image_box3.png"
+            alt="폴더 이름 변경하기"
+            width="414px"
+            height="270px"
+          />
+          <div>
+            <h2>
+              링크를 폴더로<br />
+              <span>관리</span>하세요
+            </h2>
+            <p>
+              나만의 폴더를 무제한으로 만들고<br />
+              다양하게 활용할 수 있습니다.
+            </p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <h2>
+              저장한 링크를<br />
+              <span>공유</span>해 보세요.
+            </h2>
+            <p>
+              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+              공유해 보세요.
+            </p>
+          </div>
+          <img
+            src="img/image_box4.png"
+            alt="폴더 공유하기"
+            width="570px"
+            height="469px"
+          />
+        </div>
+
+        <div>
+          <img
+            src="img/image_box5.png"
+            alt="검색 서비스"
+            width="550px"
+            height="450px"
+          />
+          <div>
+            <h2>
+              저장한 링크를<br />
+              <span>검색</span>해 보세요
+            </h2>
+            <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>©codeit - 2023</p>
+      <div>
+        <a href="/privacy">Privacy Policy</a>
+        <a href="/faq">FAQ</a>
+      </div>
+      <div>
+        <a href="https://www.facebook.com/"
+          ><img
+            src="img/facebook.svg"
+            alt="페이스북"
+            width="20px"
+            height="20px"
+        /></a>
+        <a href="https://twitter.com/"
+          ><img src="img/twitter.svg" alt="트위터" width="20px" height="20px"
+        /></a>
+        <a href="https://www.youtube.com/"
+          ><img src="img/youtube.svg" alt="유튜브" width="20px" height="20px"
+        /></a>
+        <a href="https://www.instagram.com/"
+          ><img
+            src="img/instagram.svg"
+            alt="인스타그램"
+            width="20px"
+            height="20px"
+        /></a>
+      </div>
+    </footer>
+  </body>
 </html>
