--- a/signin.html
+++ b/signin.html
@@ -36,7 +36,7 @@
         </form>
       </div>
     </div>
-    <button> 로그인 </button>
+    <button class="button-sign"> 로그인 </button>
     <div class="social-login">
       <p>소셜 로그인</p>
       <div class="social-icon">
