--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
         <p> 비밀번호와 다릅니다</p>
       </div>
     </div>
-    <button> 회원가입 </button>
+    <button class="button-sign"> 회원가입 </button>
     <div class="social-login">
       <p>다른 방식으로 가입하기</p>
       <div class="social-icon">
