--- a/signup/signup.html
+++ b/signup/signup.html
@@ -73,10 +73,10 @@
     <footer class="footer">
       <span clss="footer_text">다른 방식으로 가입하기</span>
       <div class="footer_link">
-        <a href="https://www.google.com/"
+        <a href="https://www.google.com/" target="_blank"
           ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
         /></a>
-        <a href="https://www.kakaocorp.com/page/"
+        <a href="https://www.kakaocorp.com/page/" target="_blank"
           ><img src="../img/kakao.svg" alt="카카오" width="42px" height="42px"
         /></a>
       </div>
