--- a/signin/signin.html
+++ b/signin/signin.html
@@ -54,10 +54,10 @@
       <footer class="footer">
         <span class="footer_span">소셜 로그인</span>
         <div class="footer_link">
-          <a href="https://www.google.com/"
+          <a href="https://www.google.com/" target="_blank"
             ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
           /></a>
-          <a href="https://www.kakaocorp.com/page/"
+          <a href="https://www.kakaocorp.com/page/" target="_blank"
             ><img
               src="../img/kakao.svg"
               alt="카카오"
