--- a/signup.html
+++ b/signup.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>Linkbrary</title>
-    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-    <link rel="stylesheet" as="style" crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-    <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="css/signup.css">
+    <meta charset="utf-8" />
+    <title>회원가입</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="./css/sign.css" />
   </head>
-
   <body>
-    <div class="main">
-      <a href="Linkbrary.html" class="logo"><img src="image/logo.png" alt="logo" width="210.58" height="38"></a>
-      <div class="sign_up">
-        <p>이미 회원이신가요?</p>
-        <a href="signin.html">로그인하기</a>
-      </div>
-      <form>
-        <label for="email">이메일</label>
-        <input type="email" id="email" name="email">
-        <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password">
-        <span class="icon"><ion-icon name="eye-off" id="eyeiconpw"></ion-icon></span>
-        <label for="checkpassword">비밀번호 확인</label>
-        <input type="password" id="checkpassword" name="checkpassword">
-        <span class="icon"><ion-icon name="eye-off" id="eyeiconchpw"></ion-icon></span>
-        <button>회원가입</button>
+    <header>
+      <a class="logo-link" href="index.html">
+        <img class="header-logo" src="./image/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+      </a>
+      <p class="header-message">
+        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+      </p>
+    </header>
+    <div class="sign-box">
+      <form class="sign-form">
+        <div class="sign-inputs">
+          <div class="sign-input-box">
+            <label class="sign-input-label">이메일</label>
+            <input class="sign-input" />
+          </div>
+          <div class="sign-input-box sign-password">
+            <label class="sign-input-label">비밀번호</label>
+            <input class="sign-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="./image/eye-off.svg" />
+            </button>
+          </div>
+          <div class="sign-input-box sign-password">
+            <label class="sign-input-label">비밀번호 확인</label>
+            <input class="sign-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="./image/eye-off.svg" />
+            </button>
+          </div>
+        </div>
+        <button class="cta" type="submit">회원가입</button>
       </form>
-      <div class="social">
-        <p>다른 방식으로 가입하기</p>
-        <div class="icon">
-          <a href="https://www.google.com/" target="_blank">
-            <img src="/image/Component 2.png" alt="google icon" width="42" height="42">
+      <div class="sns-box">
+        <span class="sns-text">다른 방식으로 가입하기</span>
+        <div class="sns-links">
+          <a class="sns-link google-link" href="https://www.google.com/">
+            <img src="./image/google.png" />
           </a>
-          <a href="https://www.kakaocorp.com/page/" target="_blank">
-            <img src="/image/Component 3.png" alt="kakao icon" width="42" height="42">
+          <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+            <img src="./image/kakao.svg" />
           </a>
         </div>
       </div>
