index 페이지를 tablet 환경, 반응형 웹 구현

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html"
-        ><img src="img/logo.svg" alt="Linkbrary" width="133px" height="24px"
-      /></a>
-      <a href="signin/signin.html"
-        ><button class="header_btn" type="button">로그인</button></a
-      >
+      <div class="header_div">
+        <a href="index.html"
+          ><img src="img/logo.svg" alt="Linkbrary" width="133px" height="24px"
+        /></a>
+        <a href="signin/signin.html"
+          ><button class="header_btn" type="button">로그인</button></a
+        >
+      </div>
     </header>
     <main>
       <section class="main_section">
         <h1 class="main_section_text">
           <span class="main_section_span">세상의 모든 정보</span>를<br />
-          쉽게 저장하고 관리해 보세요
+          쉽게 저장하고<br class="br_hidden" />
+          관리해 보세요
         </h1>
         <a href="/signup/signup.html"
           ><button class="main_section_btn" type="button">
@@ -49,6 +52,7 @@
             </p>
           </div>
           <img
+            class="imgs"
             src="img/image_box2.png"
             alt="링크 기능"
             width="550px"
@@ -58,6 +62,7 @@
 
         <div class="flex_boxs boxs_margin">
           <img
+            clss="imgs"
             src="img/image_box3.png"
             alt="폴더 이름 변경하기"
             width="414px"
@@ -88,6 +93,7 @@
             </p>
           </div>
           <img
+            class="imgs"
             src="img/image_box4.png"
             alt="폴더 공유하기"
             width="570px"
@@ -97,6 +103,7 @@
 
         <div class="flex_boxs boxs_margin">
           <img
+            class="imgs"
             src="img/image_box5.png"
             alt="검색 서비스"
             width="550px"
