--- a/signup.html
+++ b/signup.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/CSS/sign.css">
+  
+  
+
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Acme&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="/assets/CSS/sign.css">
+  <link rel="stylesheet" href="/assets/CSS/mobile.css">
   <title>signup</title>
 </head>
 
 <!--네이밍은 형태_의미_상태 순으로 조합하며 3단계를 넘지 않도록 합니다.-->
-<body class="sign">
-  <div class="sign__inner">
-    <div class="sign__inner__logo">
-      <a href="/"><img src="/assets/images/svg/sign-logo.svg" alt="사이트 로고 Linkbrary" class="sign__logo__img"></a>
-      <div class="sign__logo__centerTest">
-        <p class="sign__logo__not-member">이미 회원이신가요?</p>
-        <a href="/signin.html" class="signin__logo__link-signup">로그인 하기</a>
+<body class="sign-header-wrap">
+  <div class="sign-header-inner">
+    <div class="sign-header-logo">
+      <a href="/"><img src="/assets/img/svg/sign-logo.svg" class="header-logo__image" alt="사이트 로고 Linkbrary"></a>
+      <div class="header-logo__line">
+        <p class="header-logo__text">이미 회원이신가요?</p>
+        <a href="/signin.html" class="header-logo__link">로그인 하기</a>
       </div>
     </div>
 
     <form>
-      <div class="sign-input">
-        <div class="sign-input__login">
-          <label for="email" class="sign-input__login__label">이메일</label>
-          <input type="email" class="sign-input__login__input" name="eamil"> 
+      <div class="sign-wrap">
+        <div class="sign-inner">
+          <label for="email" class="sign-label">이메일</label>
+          <input type="email" class="sign-input" name="eamil"> 
         </div>
-        <div class="sign-input__login">
-          <label for="password" class="sign-input__login__label">비밀번호</label>
-          <div class="sign-input__pw-eye">
-            <input type="password" class="sign-input__login__input" name="pw">
-            <button class="sign-input__pw-eye-off">  
-              <img src="/assets/images/svg/eye-off.svg" class="eye-off" alt="비밀번호 감추기">
+        <div class="sign-inner">
+          <label for="password" class="sign-label">비밀번호</label>
+          <div class="sign__pw-eye">
+            <input type="password" class="sign-input" name="pw">
+            <button class="sign__pw-eye-off">  
+              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기">
             </button>
           </div>
         </div>
-        <div class="sign-input__login">
-          <label for="password" class="sign-input__login__label">비밀번호 확인</label>
-          <div class="sign-input__pw-eye">
-            <input type="password" class="sign-input__login__input" name="pw">
-            <button class="sign-input__pw-eye-off">  
-              <img src="/assets/images/svg/eye-off.svg" class="eye-off" alt="비밀번호 감추기">
+        <div class="sign-inner">
+          <label for="password" class="sign-label">비밀번호 확인</label>
+          <div class="sign__pw-eye">
+            <input type="password" class="sign-input" name="pw">
+            <button class="sign__pw-eye-off">  
+              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기">
             </button>
           </div>
         </div>
@@ -55,13 +60,13 @@
     <p class="social-sign__title">다른 방식으로 가입하기</p> 
     <div class="social-sign__inner">
       <a href="https://www.google.com/">
-        <div class="social-sign__inner__icon">
-          <img src="/assets/images/svg/social-icon-google.png" class="social-sign__icon-img">
+        <div class="social-sign__icon">
+          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img">
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
-        <div class="social-sign__inner__icon">
-          <img src="/assets/images/svg/social-icon-kakao.png" class="social-sign__icon-img">
+        <div class="social-sign__icon">
+          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img">
         </div>
       </a>
     </div>
