색상 변수명 변경

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="" content="">
-  <meta property="og:url" content="https://linkbrary0503.netlify.app/">
+  <meta property="og:url" content="https://linkbrary05.netlify.app/">
   <meta property="og:title" content="Linkbrary">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="/assets/images/png/meta.png">
+  <meta property="og:image" content="/assets/img/png/meta.png">
   <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
 
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
