--- a/login.html
+++ b/login.html
@@ -13,9 +13,10 @@
 	<link href="css/global.css" rel="stylesheet">
 	<link href="css/auth.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="js/password-visible.js"></script>
-	<script src="js/auth.js"></script>
-	<script src="js/auth-login.js"></script>
+
+	<script type="module" src="js/password-visible.js"></script>
+	<script type="module" src="js/auth-login.js"></script>
+	
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
 	<meta name="keywords" content="도서관, 책, 정보, 데이터베이스">
 	<meta name="author" content="SeungRyeolBaek">
