3주차 기능 구현

--- a/signin.html
+++ b/signin.html
@@ -8,12 +8,12 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="./css/sign.css" />
   </head>
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="Linkbrary.svg"/>
+        <img class="header-logo" src="./image/Linkbrary.svg"/>
       </a>
       <p class="header-message">
         회원이 아니신가요?<a class="header-link" href="signup.html">회원 가입하기</a>
@@ -30,7 +30,7 @@
             <label class="signin-input-label">비밀번호</label>
             <input class="signin-input" type="password" />
             <button class="eye-button" type="button">
-              <img src="Vector.jpg" />
+              <img src="./image/Vector.jpg" />
             </button>
           </div>
         </div>
@@ -40,10 +40,10 @@
         <span class="sns-text">소셜 로그인</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="google icon.png" />
+            <img src="./image/google icon.png" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="kakao icon.png" />
+            <img src="./image/kakao icon.png" />
           </a>
         </div>
       </div>
