--- a/index.html
+++ b/index.html
@@ -2,39 +2,53 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="title" content="Linkbrary">
+  <meta name="discription" content="세상의 모든 정보를 쉽게 저장하고 관리해보세요">
+
+  <meta property="og:title" content="Linkbrary">
+  <meta property="og:discription" content="세상의 모든 정보를 쉽게 저장하고 관리해보세요">
+  <meta property="og:url" content="https://weeklymission-hs0727.netlify.app/">
+  <meta property="og:image" content="">
+  
+  <meta name="twitter:title" content="Linkbrary">
+  <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+  <meta name="twitter:url" content="https://weeklymission-hs0727.netlify.app/">
+  <meta name="twitter:image" content="">
+  
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <title>Linkbrary</title>
-  <link rel="stylesheet" href="mainstyle.css">
+  <link rel="stylesheet" href="./css/mainstyle.css">
   <script src="https://kit.fontawesome.com/9d188ee567.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav>
     <div class="gnb">
       <a href="index.html">
-        <img class="gnb-logo" src="Linkbrary.png">
+        <img class="gnb-logo" src="./image/Linkbrary.png">
       </a>
-      <a href="/signin">
+      <a href="signin.html">
         <button class="gnb-button">로그인</button>
       </a>
     </div>
   </nav>
   <header>
-      <div class="maincontents-heading">
-        <h2 class="slogan">
-          <span id="maincontents-text-purple-to-pink">세상의 모든 정보</span>를<br>
-          쉽게 저장하고<br> 관리해보세요
-        </h2>
-      </div>
-      <div class="maincontents-goto-signup">
-        <a href="/signup">
-          <button class="goto-signup-link">링크 추가하기</button>
-        </a>
-      </div>
-      <div class="dim">
-        <img class="dim-image" src="dim.jpg">
-      </div>
+    <div class="maincontents-heading">
+      <h2 class="slogan">
+        <span id="maincontents-text-purple-to-pink">세상의 모든 정보</span>를<br>
+        쉽게 저장하고 관리해보세요
+      </h2>
+    </div>
+    <div class="maincontents-goto-signup">
+      <a href="signup.html">
+        <button class="goto-signup-link">링크 추가하기</button>
+      </a>
+    </div>
+    <div class="dim">
+      <img class="dim-image" src="./image/dim.jpg">
+    </div>
   </header>
   <article>
     <section>
@@ -42,45 +56,45 @@
         <span id="textcolor-pink-to-blue">원하는 링크를</span>
         저장하세요
       </h3>
+      <img src="./image/card.jpg" class="section_img-box-image">
       <p class="section_text_discription">
-        나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+         나중에 읽고 싶은 글, 다시 보고 싶은 영상,
         사고싶은 옷, 기억하고 싶은 모든 것을
         한 공간에 저장하세요 
       </p>
-      <img src="card.jpg" class="section_img-box-image">
     </section>
     <section>
       <h3 class="title">
         링크를 폴더로
         <span id="textcolor-yellow-to-blue">관리</span>하세요
       </h3>
+      <img class="section_img-box-image" src="./image/디스크립션 없는 팝업.jpg">
       <p class="section_text_discription">
         나만의 폴더를 무제한으로 만들고
         다양하게 활용할 수 있습니다.
       </p>
-      <img class="section_img-box-image" src="디스크립션 없는 팝업.jpg">
     </section>
     <section>
       <h3 class="title">
         저장한 링크를
         <span id="textcolor-purple-to-blue">공유</span>해 보세요
       </h3>
+      <img class="section_img-box-image" src="./image/img3.png">
       <p class="section_text_discription">
           여러 링크를 폴더에 담고 공유할 수 있습니다.
           가족, 친구, 동료들에게 쉽고 빠르게 링크를
           공유해 보세요.
       </p>
-      <img class="section_img-box-image" src="img3.png">
     </section>
     <section>
       <h3 class="title">
         저장한 링크를
         <span id="textcolor-blue-to-purple">검색</span>해 보세요
       </h3>
+      <img class="section_img-box-image" src="./image/스크린샷.jpg">
       <p class="section_text_discription">
         중요한 정보들을 검색으로 쉽게 찾아보세요.
       </p>
-      <img class="section_img-box-image" src="스크린샷.jpg">
     </section>
   </article>
   <footer>
