--- a/signup.html
+++ b/signup.html
@@ -8,12 +8,12 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="./css/sign.css" />
   </head>
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="Linkbrary.svg"/>
+        <img class="header-logo" src="./image/Linkbrary.svg"/>
       </a>
       <p class="header-message">
         이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
@@ -30,14 +30,14 @@
             <label class="signin-input-label">비밀번호</label>
             <input class="signin-input" type="password" />
             <button class="eye-button" type="button">
-              <img src="Vector.jpg" />
+              <img src="./image/Vector.jpg" />
             </button>
           </div>
           <div class="signin-input-box sign-password">
             <label class="signin-input-label">비밀번호 확인</label>
             <input class="signin-input" type="password" />
             <button class="eye-button" type="button">
-              <img src="Vector.jpg" />
+              <img src="./image/Vector.jpg" />
             </button>
           </div>
         </div>
@@ -47,10 +47,10 @@
         <span class="sns-text">다른 방식으로 가입하기</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="google icon.png" />
+            <img src="./image/google icon.png" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="kakao icon.png" />
+            <img src="./image/kakao icon.png" />
           </a>
         </div>
       </div>
