fix: add meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkbrary</title>
+    <meta
+      property="og:image"
+      content="https://i.pinimg.com/564x/6c/2a/90/6c2a90ff6ed1cf29d00c7d6fc0dc813b.jpg"
+    />
+    <meta roperty="og:url" content="https://moonwon-linkbrary.netlify.app/" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
     <link rel="stylesheet" href="styles/index.css" />
     <link
       rel="stylesheet"
