refactor(mentor): 중복되는 스타일속성 따로 분리하기 (button-style태그 생성)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a style="cursor: pointer;" href="/">
       <img src="images/logo.svg">
     </a>
-    <button class="onclick-signin" onclick="location.href='./signin.html'">
+    <button class="onclick-signin button-style" onclick="location.href='./signin.html'">
       로그인
     </button>
   </header>
@@ -24,7 +24,7 @@
         <span>세상에 모든 정보</span>를 <br>
         쉽게 저장하고 관리해 보세요
       </h1>
-      <button class="onclick-signup" onclick="location.href='signup'">링크 추가하기</button>
+      <button class="onclick-signup button-style" onclick="location.href='signup'">링크 추가하기</button>
       <img src="images/image25.png">
     </section>
     <section class="service">
