auth로 공통되는 class이름을 전체적으로 signin -> auth로 수정함

--- a/signup.html
+++ b/signup.html
@@ -11,51 +11,51 @@
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <link rel="stylesheet" href="./css/default.css">
-  <link rel="stylesheet" href="./css/signin.css">
+  <link rel="stylesheet" href="./css/auth.css">
 </head>
 
 <body>
-  <div class="signin">
-    <div class="signin__inner">
+  <div class="auth">
+    <div class="auth__inner">
       <a href="/">
-        <img class="signin__logo" src="./img/logo_big.png" alt="Linkbrary logo">
+        <img class="auth__logo" src="./img/logo_big.png" alt="Linkbrary logo">
       </a>
-      <div class="signin__text-wp">
-        <p class="signin__text">이미 회원이신가요?</p>
-        <a class="signin__link" href="./signin.html">로그인 하기</a>
+      <div class="auth__text-wp">
+        <p class="auth__text">이미 회원이신가요?</p>
+        <a class="auth__link" href="./auth.html">로그인 하기</a>
       </div>
-      <form class="signin-form">
-        <div class="signin-form__input-wp">
-          <label class="signin-form__label">이메일</label>
-          <input class="signin-form__input" type="email">
+      <form class="auth-form">
+        <div class="auth-form__input-wp">
+          <label class="auth-form__label">이메일</label>
+          <input class="auth-form__input" type="email">
         </div>
-        <div class="signin-form__input-wp">
-          <label class="signin-form__label">비밀번호</label>
-          <div class="signin-form__pw-wp">
-            <input class="signin-form__input" type="password">
-            <img class="signin-form__eye" src="./img/eye_off.png" alt="eye off">
+        <div class="auth-form__input-wp">
+          <label class="auth-form__label">비밀번호</label>
+          <div class="auth-form__pw-wp">
+            <input class="auth-form__input" type="password">
+            <img class="auth-form__eye" src="./img/eye_off.png" alt="eye off">
           </div>
         </div>
-        <div class="signin-form__input-wp">
-          <label class="signin-form__label">비밀번호 확인</label>
-          <div class="signin-form__pw-wp">
-            <input class="signin-form__input">
-            <img class="signin-form__eye" src="./img/eye_on.png" alt="eye on">
+        <div class="auth-form__input-wp">
+          <label class="auth-form__label">비밀번호 확인</label>
+          <div class="auth-form__pw-wp">
+            <input class="auth-form__input">
+            <img class="auth-form__eye" src="./img/eye_on.png" alt="eye on">
           </div>
         </div>
-        <button class="btn signin-form__btn">회원가입</button>
+        <button class="btn auth-form__btn">회원가입</button>
       </form>
-      <div class="signin-sns">
-        <h2 class="signin-sns__title">다른 방식으로 가입하기</h2>
-        <ul class="signin-sns__ul">
-          <li class="signin-sns__li">
+      <div class="auth-sns">
+        <h2 class="auth-sns__title">다른 방식으로 가입하기</h2>
+        <ul class="auth-sns__ul">
+          <li class="auth-sns__li">
             <a href="https://www.google.com/">
-              <img class="signin-form__img" src="./img/login_google.png" alt="구글 로그인">
+              <img class="auth-form__img" src="./img/login_google.png" alt="구글 로그인">
             </a>
           </li>
-          <li class="signin-sns__li">
+          <li class="auth-sns__li">
             <a href="https://www.kakaocorp.com/page/">
-              <img class="signin-form__img" src="./img/login_kakaotalk.png" alt="카카오톡 로그인">
+              <img class="auth-form__img" src="./img/login_kakaotalk.png" alt="카카오톡 로그인">
             </a>
           </li>
         </ul>
