Feat landing page media query

--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
     <article>
       <section>
         <h2 class="title">
-          <span class="title1-gradient">원하는 링크</span>를<br />
+          <span class="title1-gradient">원하는 링크</span>를<br
+            class="br_tag"
+          />
           저장하세요
         </h2>
         <h6 class="description">
-          나중에 읽고 싶은 글, 다시보고 싶은 영성,<br />
-          사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+          나중에 읽고 싶은 글, 다시보고 싶은 영성,<br class="br_tag" />
+          사고 싶은 옷, 기억하고 싶은 모든 것을<br class="br_tag" />
           한 공간에 저장하세요.
         </h6>
         <img src="./img/landing-section1.png" class="sec-img" />
@@ -63,11 +65,11 @@
       <!--2번째 섹션-->
       <section>
         <h2 class="title">
-          링크를 폴더로<br />
+          링크를 폴더로<br class="br_tag" />
           <span class="title2-gradient">관리</span>하세요
         </h2>
         <h6 class="description">
-          나만의 폴더를 무제한으로 만들고<br />
+          나만의 폴더를 무제한으로 만들고<br class="br_tag" />
           다양하게 활용할 수 있습니다.
         </h6>
         <img src="./img/landing-section2.png" class="sec-img" />
@@ -76,12 +78,12 @@
       <!--3번째 섹션-->
       <section>
         <h2 class="title">
-          저장한 링크를<br />
+          저장한 링크를<br class="br_tag" />
           <span class="title3-gradient">공유</span>해 보세요
         </h2>
         <h6 class="description">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+          여러 링크를 폴더에 담고 공유할 수 있습니다.<br class="br_tag" />
+          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br class="br_tag" />
           공유해 보세요.
         </h6>
         <img src="./img/landing-section3.png" class="sec-img" />
@@ -90,7 +92,7 @@
       <!--4번째 섹션-->
       <section>
         <h2 class="title">
-          저장한 링크를<br />
+          저장한 링크를<br class="br_tag" />
           <span class="title4-gradient">검색</span>해 보세요
         </h2>
         <h6 class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</h6>
