refactor(mentor): 누락된 텍스트 시안 수정

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="service-01 card">
           <div class="card-text">
             <h2>
-              <span class="style-01">원하는 링크</span>를<br>
+              <span>원하는 링크</span>를<br>
               지정하세요<br>
             </h2>
             나중에 읽고 싶은 글, 다시 보고싶은 영상,<br>
@@ -80,16 +80,14 @@
         </div>
         <div class="service-04 card">
           <div class="images">
-            <img src="images/스크린샷 2023-03-17 오후 3.22 1.png">
+            <img src="images/스크린샷 2023-03-17 오후 3.22 1.png">
           </div>
           <div>
             <h2>
               저장한 링크를<br>
               <span>검색</span>해 보세요<br>
             </h2>
-            <span>
               중요한 정보들을 검색으로 쉽게 찾아보세요
-            </span>
           </div>
         </div>
       </div>
